--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "chordeographer",
-    "slug": "chordeographer",
+    "name": "chordeographer_expo",
+    "slug": "chordeographer_expo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
