--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "~42.0.1",
+    "expo-av": "^9.2.3",
     "expo-status-bar": "~1.0.4",
     "lodash": "^4.17.21",
     "react": "16.13.1",
